--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Arial', sans-serif;
+  font-family: 'Encode Sans Expanded', sans-serif;
   width: 100vw;
   height: 100vh;
 }
@@ -10,4 +10,7 @@ body {
 .main-container {
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
