--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,10 +1,41 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap');
+
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Encode Sans Expanded', sans-serif;
+  font-family: 'Rubik', sans-serif;
   width: 100vw;
   height: 100vh;
+  background-image: 
+    linear-gradient(
+      438deg,
+      transparent 0%,
+      transparent 8%,
+      rgba(90,90,90, 0.11) 8%,
+      rgba(90,90,90, 0.11) 21%,
+      transparent 21%,
+      transparent 100%),
+    linear-gradient(
+      393deg,
+      transparent 0%,
+      transparent 23%,
+      rgba(90,90,90, 0.11) 23%,
+      rgba(90,90,90, 0.11) 37%,
+      transparent 37%,
+      transparent 100%),
+    linear-gradient(
+      348deg,
+      transparent 0%,
+      transparent 37%,
+      rgba(90,90,90, 0.11) 37%,
+      rgba(90,90,90, 0.11) 49%,
+      transparent 49%,
+      transparent 100%),
+    linear-gradient(
+      438deg,
+      rgba(255,255,255, 0.57),
+      rgba(255,255,255, 0.57));
 }
 
 .main-container {
