--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -48,6 +48,7 @@ body {
 
 .timeline {
   border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 5px;
   height: 100px;
 }
 
@@ -55,18 +56,23 @@ body {
   display: flex;
 }
 
-.checkbox-container {
+.timeline-checkboxes {
   display: flex;
-  flex-direction: row;
+  justify-content: space-between;
   width: 100%;
-  height: 20px;
+}
+
+.checkbox-container {
+  width: 25px;
+  height: 25px;
 }
 
 .timeline-collaborators-collaborator {
   font-size: 16px;
   height: 20px;
   margin: 2px;
-  width: 50px;
+  width: 70px;
+  text-align: center;
   border: 1px solid transparent;
   margin: 2px;
   vertical-align: middle;
@@ -74,11 +80,12 @@ body {
 
 .timeline-months {
   display: flex;
-  padding-left: 59px;
+  justify-content: space-between;
+  width: 705px;
+  margin-left: 80px;
 }
 
 .timeline-months-month {
   width: 20px;
-  font-size: 9px;
-  margin: 4px;
+  font-size: 10px;
 }
