--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -50,6 +50,11 @@ body {
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 5px;
   height: 100px;
+  overflow-x: auto; 
+}
+
+.timeline::-webkit-scrollbar {
+  display: none;
 }
 
 .timeline-body {
