--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -59,6 +59,23 @@ body {
   height: 70%;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+  height: 7px; 
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #d5d5d5; 
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #a7a4a4; 
+}
 .timeline-checkboxes {
   display: flex;
   justify-content: space-between;
@@ -95,11 +112,11 @@ body {
 .timeline-months {
   display: flex;
   justify-content: space-between;
-  margin: 0 0 10px 50px;
+  margin: 0 0 10px 80px;
 }
 
 .timeline-months-month {
   width: 20px;
-  font-size: 7.5px;
-  margin-right: 10.1px;
+  font-size: 10px;
+  margin-right: 20px;
 }
