--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -49,9 +49,10 @@ body {
 .timeline {
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 5px;
-  height: 100px;
+  height: 110px;
   overflow-x: auto; 
   border-radius: 2px;
+  margin: 10px 0;
 }
 
 .timeline-body {
@@ -69,7 +70,7 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #d5d5d5; 
+  background: #313131; 
   border-radius: 10px;
 }
 
