--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -70,7 +70,7 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #313131; 
+  background: #74726b; 
   border-radius: 10px;
 }
 
@@ -80,7 +80,9 @@ body {
 .timeline-checkboxes {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   width: 100%;
+  height: 100%;
 }
 
 .checkbox-container {
@@ -98,26 +100,34 @@ body {
 
 .collaborator {
   display: flex;
+  justify-content: flex-end;
+  height: 70px;
 }
 .timeline-collaborators-collaborator {
   font-size: 16px;
-  height: 20px;
+  height: 100%;
   margin: 2px;
   width: 70px;
   text-align: center;
   border: 1px solid transparent;
   margin: 2px;
   vertical-align: middle;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .timeline-months {
   display: flex;
   justify-content: space-between;
-  margin: 0 0 10px 80px;
+  margin-left: 76px;
 }
 
 .timeline-months-month {
-  width: 20px;
-  font-size: 10px;
-  margin-right: 20px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  width: 40px;
+  font-size: 11px;
+  margin-right: 19.5px;
 }
